# soilspec

./: .gitignore  .readthedocs.yaml  LICENSE  MODULE_STATUS.md  PACKAGE_STATUS.md  PINN_VIABILITY_ASSESSMENT.md  QUICKSTART.md  README.md  REFERENCES.md  REVISED_PACKAGE_PLAN.md  REVISED_PINN_ASSESSMENT.md  pyproject.toml  soilspec.ipynb  soilspec_package_plan.md
docs/: Makefile  index.rst  requirements-docs.txt
docs/_static/: custom.css
docs/api/: preprocessing.rst
docs/user_guide/: feature_engineering.rst  installation.rst  preprocessing.rst
soilspec/: __init__.py  cli.py
soilspec/datasets/: __init__.py  augmentation.py  loaders.py
soilspec/docs/: changelog.rst  conf.py  contributing.rst  references.bib
soilspec/docs/api/: features.rst  interpretation.rst  knowledge.rst  models.rst
soilspec/docs/user_guide/: examples.rst  models.rst  quickstart.rst
soilspec/experimental/: __init__.py  gadf.py
soilspec/features/: __init__.py  peak_integration.py  ratios.py  transformers.py
soilspec/integration/: __init__.py
soilspec/io/: __init__.py  bruker.py  ossl.py
soilspec/knowledge/: __init__.py  band_parser.py  constraints.py  spectral_bands.csv  visualization.py
soilspec/models/: __init__.py
soilspec/models/deep_learning/: __init__.py  cnn1d.py
soilspec/models/traditional/: __init__.py  cubist_wrapper.py  mbl.py
soilspec/prediction/: __init__.py
soilspec/preprocessing/: __init__.py  baseline.py  derivatives.py  resample.py  smoothing.py
soilspec/tests/: test_io.py  test_preprocessing.py
soilspec/tests/test_features/: test_peak_integration.py
soilspec/training/: __init__.py  callbacks.py  deep_learning_trainer.py  metrics.py  pinn_trainer.py  trainer.py
soilspec/utils/: __init__.py  spectral.py  visualization.py
soilspec_pinn/: __init__.py  cli.py
soilspec_pinn/datasets/: __init__.py
soilspec_pinn/features/: __init__.py  peak_integration.py  ratios.py  transformers.py
soilspec_pinn/integration/: __init__.py
soilspec_pinn/io/: __init__.py  converters.py
soilspec_pinn/knowledge/: __init__.py  band_parser.py  constraints.py  visualization.py
soilspec_pinn/prediction/: __init__.py
soilspec_pinn/preprocessing/: __init__.py  baseline.py
soilspec_pinn/training/: __init__.py
soilspec_pinn/utils/: __init__.py
tests/: test_io.py  test_preprocessing.py
tests/test_features/: test_peak_integration.py
tests/test_knowledge/: test_band_parser.py
