[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soilspec-pinn"
version = "0.1.0"
description = "Physics-Informed Neural Networks for Soil Spectroscopy Analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["spectroscopy", "soil", "PINN", "machine learning", "infrared", "DRIFTS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pywavelets>=1.4.0",
    "brukeropusreader>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]
mpnn = [
    "torch-geometric>=2.3.0",
    "rdkit>=2023.3.1",
]
mlops = [
    "mlflow>=2.8.0",
    "wandb>=0.15.0",
]
all = [
    "soilspec-pinn[dev,mpnn,mlops]",
]

[project.urls]
Homepage = "https://github.com/yourusername/soilspec-pinn"
Documentation = "https://soilspec-pinn.readthedocs.io"
Repository = "https://github.com/yourusername/soilspec-pinn"
Issues = "https://github.com/yourusername/soilspec-pinn/issues"

[project.scripts]
soilspec = "soilspec_pinn.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["soilspec_pinn*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=soilspec_pinn --cov-report=html --cov-report=term-missing"
