[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soilspec"
version = "0.1.0"
description = "Evidence-Based Machine Learning for Soil Spectroscopy"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["spectroscopy", "soil", "machine learning", "deep learning", "infrared", "DRIFTS", "MBL", "Cubist"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pywavelets>=1.4.0",
    "brukeropusreader>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "cubist>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]
deep-learning = [
    "torch>=2.0.0",
    "lightning>=2.0.0",
]
data = [
    "soilspecdata>=0.1.0",
]
mlops = [
    "mlflow>=2.8.0",
    "wandb>=0.15.0",
]
all = [
    "soilspec[dev,deep-learning,data,mlops]",
]

[project.urls]
Homepage = "https://github.com/yourusername/soilspec"
Documentation = "https://soilspec.readthedocs.io"
Repository = "https://github.com/yourusername/soilspec"
Issues = "https://github.com/yourusername/soilspec/issues"

[project.scripts]
soilspec = "soilspec.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["soilspec*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=soilspec --cov-report=html --cov-report=term-missing"
